--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@supabase/supabase-js": "^2.49.9",
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
