--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "typescript": "4.9.5"
   },
   "scripts": {
